[project]
name = "audiotree"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
  { name="David Braun", email="braun@ccrma.stanford.edu" },
]
description = "Audio data loading and augmentations in JAX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    "audio",
    "machine learning",
]

[project.urls]
Homepage = "https://github.com/DBraun/audiotree"
Issues = "https://github.com/DBraun/audiotree/issues"

[tool.setuptools.dynamic]
version = {attr = "audiotree.__version__"}