[metadata]
name = audiotree
version = attr: audiotree.__version__
url = https://github.com/DBraun/audiotree
author = David Braun
author_email = braun@ccrma.stanford.edu
description = Audio data loading and augmentations in JAX
long_description = file: README.md
long_description_content_type = "text/markdown"
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    chex>=0.1.86
    dm_aux @ git+https://github.com/DBraun/dm_aux.git@DBraun-patch-1
    einops
    flax>=0.8.2
    grain==0.1.0
    jaxloudnorm @ git+https://github.com/DBraun/jaxloudnorm.git@feature/speed-optimize
    librosa>=0.10.1
    numpy
    soundfile

[options.packages.find]
where = src

[options.extras_require]
dev =
    argbind @ git+https://github.com/DBraun/argbind.git@improve.subclasses
    pytest
    pytest-cov
